feat: html, css initial version

--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,63 @@
 <body>
   <h1>7. Домашнее задание к лекции "Работа с HTTP"</h1>
   <h2>7.2 "HelpDesk: Frontend"</h2>
+  <div class="container">
+    <div data-widget="help-desk" class="help-desk">
+      <div class="help-desk__control">
+        <button class="help-desk__btn help-desk__btn_action_add">Add Ticket</button>
+      </div>
+      <div class="help-desk__body">
+        <table class="help-desk__table">
+          <tr class="help-desk__row">
+            <td class="help-desk__cell">
+              <button class="help-desk__btn help-desk__btn_type_round help-desk__btn_action_status">
+                <span data-visibility="v-hidden">Status</span>
+              </button>
+            </td>
+            <td class="help-desk__cell help-desk__coll-name">
+              Поменять краску в принтере
+              <span class="help-desk__description">Описание для замены краски в принтере.</span>
+            </td>
+            <td class="help-desk__cell help-desk__coll-created">10:03:19 08:40</td>
+            <td class="help-desk__cell">
+              <button class="help-desk__btn help-desk__btn_type_round help-desk__btn_action_edit">
+                <span data-visibility="v-hidden">Edit</span>
+              </button>
+            </td>
+            <td class="help-desk__cell">
+              <button class="help-desk__btn help-desk__btn_type_round help-desk__btn_action_delete">
+                <span data-visibility="v-hidden">Delete</span>
+              </button>
+            </td>
+          </tr>
+
+          <tr class="help-desk__row">
+            <td class="help-desk__cell">
+              <button class="help-desk__btn help-desk__btn_type_round help-desk__btn_action_status">
+                <span data-visibility="v-hidden">Status</span>
+              </button>
+            </td>
+            <td class="help-desk__cell help-desk__coll-name">
+              Поменять краску в принтере
+              <span class="help-desk__description">Описание для замены краски в принтере. Пункт первый.</span>
+            </td>
+            <td class="help-desk__cell help-desk__coll-created">10:03:19 08:40</td>
+            <td class="help-desk__cell">
+              <button class="help-desk__btn help-desk__btn_type_round help-desk__btn_action_edit">
+                <span data-visibility="v-hidden">Edit</span>
+              </button>
+            </td>
+            <td class="help-desk__cell">
+              <button class="help-desk__btn help-desk__btn_type_round help-desk__btn_action_delete">
+                <span data-visibility="v-hidden">Delete</span>
+              </button>
+            </td>
+          </tr>
+
+        </table>
+      </div>
+
+    </div>
+  </div>
 </body>
 </html>
