feat: createRequest.js added

--- a/src/index.html
+++ b/src/index.html
@@ -15,95 +15,6 @@
 <body>
   <h1>7. Домашнее задание к лекции "Работа с HTTP"</h1>
   <h2>7.2 "HelpDesk: Frontend"</h2>
-  <div class="container">
-    <div data-widget="help-desk-temp" class="help-desk">
-      <div class="help-desk__control">
-        <button class="btn btn_type_rect">Add Ticket</button>
-      </div>
-      <div class="help-desk__body">
-        <table class="help-desk__table">
-          <tr class="help-desk__row">
-            <td class="help-desk__cell">
-              <!-- !!!!!!!!!!!!!! btn_action ??????? !!!!!!!!!!!!!!!!!!!!!!!! -->
-              <button class="btn btn_type_round btn_action_status">
-                <span data-visibility="v-hidden">Status</span>
-              </button>
-            </td>
-            <td class="help-desk__cell help-desk__coll-name">
-              Поменять краску в принтере
-              <span class="help-desk__description">Описание для замены краски в принтере.</span>
-            </td>
-            <td class="help-desk__cell help-desk__coll-created">10:03:19 08:40</td>
-            <td class="help-desk__cell">
-              <button class="btn btn_type_round btn_action_edit">
-                <span data-visibility="v-hidden">Edit</span>
-              </button>
-            </td>
-            <td class="help-desk__cell">
-              <button class="btn btn_type_round btn_action_delete">
-                <span data-visibility="v-hidden">Delete</span>
-              </button>
-            </td>
-          </tr>
-
-          <tr class="help-desk__row">
-            <td class="help-desk__cell">
-              <button class="btn btn_type_round btn_action_status">
-                <span data-visibility="v-hidden">Status</span>
-              </button>
-            </td>
-            <td class="help-desk__cell help-desk__coll-name">
-              Поменять краску в принтере
-              <span class="help-desk__description">Описание для замены краски в принтере. Пункт первый.</span>
-            </td>
-            <td class="help-desk__cell help-desk__coll-created">10:03:19 08:40</td>
-            <td class="help-desk__cell">
-              <button class="btn btn_type_round btn_action_edit">
-                <span data-visibility="v-hidden">Edit</span>
-              </button>
-            </td>
-            <td class="help-desk__cell">
-              <button class="btn btn_type_round btn_action_delete">
-                <span data-visibility="v-hidden">Delete</span>
-              </button>
-            </td>
-          </tr>
-        </table>
-
-        <form data-visibility="hidden" class="modal">
-          <h3 class="modal__title">Add Ticket</h3>
-          <label class="modal__row">
-            <span class="modal__prop">Name</span>
-            <input class="modal__value" type="text" name="name" required>
-          </label>
-
-          <label class="modal__row">
-            <span class="modal__prop">Description</span>
-            <textarea class="modal__value" name="description" rows="3"></textarea>
-          </label>
-
-          <div class="modal__control">
-            <button class="btn btn_type_rect modal__btn">Save</button>
-            <button class="btn btn_type_rect modal__btn">Cancel</button>
-          </div>
-        </form>
-
-        <form data-visibility="hidden" class="modal">
-          <h3 class="modal__title">Delete Ticket</h3>
-          <p class="modal__content">
-            Are you sure you want to delete the Ticket?<br>
-            That's obviously irreversible.
-          </p>
-
-          <div class="modal__control">
-            <button class="btn btn_type_rect modal__btn">Delete</button>
-            <button class="btn btn_type_rect modal__btn">Cancel</button>
-          </div>
-        </form>
-
-      </div>
-
-    </div>
-  </div>
+  <div class="container"></div>
 </body>
 </html>
