--- a/src/html/help-desk.html
+++ b/src/html/help-desk.html
@@ -2,7 +2,7 @@
   <div class="help-desk__control">
     <button class="btn btn_type_rect">Add Ticket</button>
   </div>
-  <div class="help-desk__body">
-    <table class="help-desk__table"></table>
+  <div data-id="body" class="help-desk__body">
+    <table data-id="table" class="help-desk__table"></table>
   </div>
 </div>
