feat: modal windows logic added

--- a/src/html/help-desk.html
+++ b/src/html/help-desk.html
@@ -1,6 +1,6 @@
 <div data-widget="help-desk" class="help-desk">
   <div class="help-desk__control">
-    <button class="btn btn_type_rect">Add Ticket</button>
+    <button data-action="add" class="btn btn_type_rect">Add Ticket</button>
   </div>
   <div data-id="body" class="help-desk__body">
     <table data-id="table" class="help-desk__table"></table>
