--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
 <body>
   <h1>7. Домашнее задание к лекции "Работа с HTTP"</h1>
   <h2>7.2 "HelpDesk: Frontend"</h2>
-  <div class="container"></div>
+  <div data-id="container" class="container"></div>
 </body>
 </html>
