feat: modal-ticket window logic comleted

--- a/src/html/modal-ticket.html
+++ b/src/html/modal-ticket.html
@@ -1,4 +1,4 @@
-<div data-modal="ticket" data-visibility="hidden" class="modal">
+<div data-modal="container" data-visibility="hidden" class="modal">
   <form data-modal="form" class="modal__form">
     <h3 data-modal="title" class="modal__title"></h3>
     <label class="modal__row">
@@ -12,7 +12,7 @@
     </label>
 
     <div class="modal__control">
-      <button data-action="save" class="btn btn_type_rect modal__btn">Save</button>
+      <button class="btn btn_type_rect modal__btn">Save</button>
       <button data-action="cancel" class="btn btn_type_rect modal__btn">Cancel</button>
     </div>
   </form>
