--- a/src/html/modal-confirm.html
+++ b/src/html/modal-confirm.html
@@ -1,12 +1,10 @@
-<form data-visibility="hidden" class="modal">
-  <h3 class="modal__title">Delete Ticket</h3>
-  <p class="modal__content">
-    Are you sure you want to delete the Ticket?<br>
-    That's obviously irreversible.
-  </p>
-
-  <div class="modal__control">
-    <button class="btn btn_type_rect modal__btn">Delete</button>
-    <button class="btn btn_type_rect modal__btn">Cancel</button>
-  </div>
-</form>
+<div data-modal="container" data-visibility="hidden" class="modal">
+  <form data-modal="form" class="modal__form">
+    <h3 class="modal__title">Delete Ticket</h3>
+    <p class="modal__content">Are you sure you want to delete the Ticket?<br>That's obviously irreversible.</p>
+    <div class="modal__control">
+      <button class="btn btn_type_rect modal__btn">Delete</button>
+      <button data-action="cancel" class="btn btn_type_rect modal__btn">Cancel</button>
+    </div>
+  </form>
+</div>
